# anything-world-python

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  env.example  pyproject.toml
anything_world/: __init__.py  api_client.py  settings.py  utils.py
anything_world/async_api/: api_client.py  utils.py
anything_world/sync_api/: api_client.py  utils.py
anything_world/utils/: __init__.py
examples/cat/: cat.mtl
scripts/: cli.py
tests/: context.py  test_anything_world.py  test_async_api.py  test_sync_api.py
