[build-system]
requires = ["setuptools>=61.0", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "anything_world"
version = "0.1.3"
authors = [
    {name = "Anything World", email = "support@anything.world"},
]
description = "Anything World API wrapper library and CLI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python-dotenv==1.0.0",
    "requests==2.28.2",
    "pytest==7.2.2",
    "pytest-asyncio==0.21.0",
    "aiohttp==3.8.4",
    "aiofiles==23.2.1",
    "fire==0.5.0"
]

[project.urls]
Homepage = "https://anything.world"

[tool.setuptools.packages.find]
include = ["anything_world*", "scripts*"]


[project.scripts]
anything = "scripts.cli:main"
